// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sample test > parse common sentence 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "CommonWord": [
            {
              "image": "There",
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "is",
              "startOffset": 6,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "no",
              "startOffset": 9,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "error",
              "startOffset": 12,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
          ],
          "period": [
            {
              "image": ".",
              "startOffset": 17,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 7,
              },
              "tokenTypeIdx": 7,
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse function error target 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "CommonWord": [
            {
              "image": "Function",
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "not",
              "startOffset": 16,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "found",
              "startOffset": 20,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
          ],
          "FunctionName": [
            {
              "image": "format",
              "startOffset": 9,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\(\\?<!\\(A\\|a\\)nonymous function \\)\\(\\?<=\\(F\\|f\\)unction \\)\\[a-zA-Z0-9_\\]\\+\\(\\\\\\\\\\[a-zA-Z0-9_\\]\\+\\)\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "FunctionName",
                "tokenTypeIdx": 3,
              },
              "tokenTypeIdx": 3,
            },
          ],
          "period": [
            {
              "image": ".",
              "startOffset": 25,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 7,
              },
              "tokenTypeIdx": 7,
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse function not found error 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "CommonWord": [
            {
              "image": "Function",
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "not",
              "startOffset": 16,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "found",
              "startOffset": 20,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
          ],
          "FunctionName": [
            {
              "image": "format",
              "startOffset": 9,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\(\\?<!\\(A\\|a\\)nonymous function \\)\\(\\?<=\\(F\\|f\\)unction \\)\\[a-zA-Z0-9_\\]\\+\\(\\\\\\\\\\[a-zA-Z0-9_\\]\\+\\)\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "FunctionName",
                "tokenTypeIdx": 3,
              },
              "tokenTypeIdx": 3,
            },
          ],
          "period": [
            {
              "image": ".",
              "startOffset": 25,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 7,
              },
              "tokenTypeIdx": 7,
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse function with namespace error target 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "CommonWord": [
            {
              "image": "Function",
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "not",
              "startOffset": 20,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "found",
              "startOffset": 24,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
          ],
          "FunctionName": [
            {
              "image": "abc\\format",
              "startOffset": 9,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\(\\?<!\\(A\\|a\\)nonymous function \\)\\(\\?<=\\(F\\|f\\)unction \\)\\[a-zA-Z0-9_\\]\\+\\(\\\\\\\\\\[a-zA-Z0-9_\\]\\+\\)\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "FunctionName",
                "tokenTypeIdx": 3,
              },
              "tokenTypeIdx": 3,
            },
          ],
          "period": [
            {
              "image": ".",
              "startOffset": 29,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 7,
              },
              "tokenTypeIdx": 7,
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse method error target 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "CommonWord": [
            {
              "image": "Anonymous",
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "function",
              "startOffset": 10,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "has",
              "startOffset": 19,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "invalid",
              "startOffset": 23,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "return",
              "startOffset": 31,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "type",
              "startOffset": 38,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "TestClosureFunctionTypehintsPhp",
              "startOffset": 43,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "NonexistentClass",
              "startOffset": 76,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
          ],
          "period": [
            {
              "image": ".",
              "startOffset": 92,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 7,
              },
              "tokenTypeIdx": 7,
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;

exports[`sample test > parse method with namespace error target 1`] = `
{
  "children": {
    "sentence": [
      {
        "children": {
          "CommonWord": [
            {
              "image": "Parameter",
              "startOffset": 0,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "of",
              "startOffset": 13,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "anonymous",
              "startOffset": 16,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "function",
              "startOffset": 26,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "has",
              "startOffset": 35,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "unresolvable",
              "startOffset": 39,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "native",
              "startOffset": 52,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
            {
              "image": "type",
              "startOffset": 59,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\[a-zA-Z\\]\\+/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "CommonWord",
                "tokenTypeIdx": 5,
              },
              "tokenTypeIdx": 5,
            },
          ],
          "Variable": [
            {
              "image": "$a",
              "startOffset": 10,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": /\\\\\\$\\[a-z\\]\\[a-zA-Z0-9_\\]\\*/,
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "Variable",
                "tokenTypeIdx": 9,
              },
              "tokenTypeIdx": 9,
            },
          ],
          "period": [
            {
              "image": ".",
              "startOffset": 63,
              "tokenType": {
                "CATEGORIES": [],
                "LINE_BREAKS": false,
                "PATTERN": ".",
                "categoryMatches": [],
                "categoryMatchesMap": {},
                "isParent": false,
                "name": "period",
                "tokenTypeIdx": 7,
              },
              "tokenTypeIdx": 7,
            },
          ],
        },
        "name": "sentence",
      },
    ],
  },
  "name": "errorMessage",
}
`;
